Source/WebCore/html/canvas/CanvasRenderingContext2D.cpp
@@ -174,6 +174,11 @@ void CanvasRenderingContext2D::reset()
         if (m_context3D && m_drawingBuffer) {
             m_drawingBuffer->reset(IntSize(canvas()->width(), canvas()->height()));
             c->setSharedGraphicsContext3D(m_context3D.get(), m_drawingBuffer.get(), IntSize(canvas()->width(), canvas()->height()));
+#if USE(ACCELERATED_COMPOSITING)
+            RenderBox* renderBox = canvas()->renderBox();
+            if (renderBox && renderBox->hasLayer() && renderBox->layer()->hasAcceleratedCompositing())
+                renderBox->layer()->contentChanged(RenderLayer::CanvasChanged);
+#endif
         }
     }
 #endif
